--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;Trusted_Connection=True;"
+  },
   "Authentication": {
     "ApiKey": "27d34740-c3d4-4938-9260-b5ba3a62922c"
   },
